fixed some of the spacing issues

--- a/components/cards.css
+++ b/components/cards.css
@@ -2,7 +2,6 @@
   align-self: center;
   display: flex;
   max-width: 550px;
-  max-height: 300px;
   padding: 30px;
   margin: 20px;
   border-radius: 9px;
